# Kitten-TTS-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/kitten_tts_server/: __main__.py  config.py  engine.py  server.py  utils.py
src/kitten_tts_server/ui/: index.html  script.js
src/ui/: index.html  script.js
