[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitten-tts-server"
version = "0.1.0"
description = "FastAPI-based server for KittenTTS (ONNX), with Web UI"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    # PyTorch CPU-only (will be resolved from extra index)
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",

    # Web Framework
    "fastapi",
    "uvicorn[standard]",

    # KittenTTS Core Dependencies
    "onnxruntime<1.20",  # Pin to <1.20 for Python 3.9 compatibility
    "soundfile",
    "numpy",
    "huggingface_hub",
    "phonemizer",
    "espeakng_loader==0.2.0",

    # Configuration & Utilities
    "PyYAML",
    "python-multipart",
    "requests",
    "Jinja2",
    "watchdog",
    "aiofiles",
    "unidecode",
    "inflect",
    "tqdm",
    "hf-transfer",
    "pydub",
    "librosa",
    "praat-parselmouth",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-cov>=4,<6",
    "ruff>=0.4",
    "types-PyYAML",
    "types-requests"
]

[project.scripts]
meow = "kitten_tts_server.__main__:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/kitten_tts_server"]

[tool.hatch.build]
include = ["src/kitten_tts_server/ui/**"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.uv]
# This ensures PyTorch comes from CPU-only wheels
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
index-strategy = "unsafe-best-match"
